--- a/config.json
+++ b/config.json
@@ -11,5 +11,10 @@
 	"admins":{
 		"admin_1": 239823355,
 		"admin_2": 336765139
+	},
+	"freekassa":{
+		"m_id": 172424,
+		"s_word": "5hqq1lzk",
+		"s_word_2": "z9kqenny"
 	}
 }
